# CLOUD-WEAVERS-Hackathon

./: .gitignore  README.md
backend/: graph.py  pyproject.toml  server.py
backend/agents/: gatekeeper.py  gold_sjc.py  market_intel.py  open_finance.py  real_estate.py  smart_paste.py  synthesizer.py
backend/data/: aml_blacklist.json  gold.json  market.json  open_finance.json  real_estate.json  scenarios.json
backend/models/: __init__.py  state.py
backend/utils/: llm.py  pii_redactor.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts
frontend/src/components/: AgentResultsReview.tsx  ClientForm.tsx  DAGStatus.tsx  ProfileReview.tsx  ReportReview.tsx
